--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
+    "vue-calendar-3": "^2.6.6",
     "vue-router": "^4.3.0"
   }
 }
